--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "dompdf/dompdf": "^3.1",
         "laravel/cashier": "^15.7",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "laravel/ui": "^4.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
